src/index.css
/*
 * I'm using the BEM naming convention.
 */
:root {
  --red: #e54242;
  --lightgreen: #9cc19b;
  --lightgray: #E0E0E0;
  --gray: #606060;
  --darkgray: #2A2A2A;
  --darkergray: #1B1B1B;
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: content-box;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  background-image: url('./assets/images/background.jpg');
  font-size: 20px;
  overflow-x: hidden;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

ul {
  list-style: none;
  padding-left: 0.5em;
}

p {
  padding: 10px;
}

a:link {
  text-decoration: none;
}

a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

a:active {
  text-decoration: none;
}

.padded-div {
  margin-top: 10px;
  margin-left: 25px;
  padding: 3px;
}

.centered-div {
  text-align: center;
  margin: 0 auto;
  width: 0;
}

@keyframes animatetop {
  from {top: -300px; opacity: 0}
  to {top: 20%; opacity: 1}
}

.modal-background {
  position: absolute;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.6);
}

.modal {
  z-index: 2;
  animation-name: animatetop;
  animation-duration: 0.4s;

  padding: 10px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
  z-index: 1;
  width: 350px;
  height: 200px;
  background-color: var(--darkgray);
  border-radius: 10px;

  position: absolute; 
  top: 20%;
  left: 0; 
  right: 0; 
  margin-left: auto; 
  margin-right: auto; 
}

.modal__ok-button {
  position: absolute;
  bottom: 20px;
  right: 20px;
  min-width: 80px;
}

.modal__cancel-button {
  position: absolute;
  bottom: 20px;
  left: 20px;
  min-width: 80px;
}

/* im not going to override button,
   it messes with all the styles for the round buttons
   and i dont feel like fixing to now */
.button {
  background-color: var(--lightgreen);
  color: var(--darkergray);
  border: none;
  appearance: none;
  outline: none;
  padding: 8px;
  font-size: 18px;
  border-radius: 16px;
}

.warning-button {
  background-color: var(--red);
  color: var(--darkergray);
  border: none;
  appearance: none;
  outline: none;
  padding: 8px;
  font-size: 18px;
  border-radius: 16px;
}

.input {
  padding: 5px;
  font-size: 18px;
  background-color: var(--lightgray);
  border: none;
  appearance: none;
  outline: none;
  border-radius:5px;
}

.round-thumbnail {
  width: 65px;
  height: 65px;
  object-fit: cover;
  border-radius: 50%;
}

.carousel__wrapper {
  /* use this in conjunction with the overlay button */
  position: relative;
  display: flex;
  justify-content: center;
  height: 330px;
  overflow: hidden;
  margin-top: -50px;
}

.screen-div-always-needed {
  position: relative;
  background-color: var(--darkergray);
  height: 100vh;
  overflow: hidden;
}

.screen-div-browser-mode-only {
  width: 480px;
  height: 800px;
  margin: 0 auto;
  margin-top: 2%;
  border-radius: 15px;
}

.carousel__spinner-wrapper {
  transform: translateY(160px);
}

.carousel__overlay-delete-image-button {
  /* positioning */
  position: absolute;
  top: 45%;
  left: 90%;
  transform: translate(-75%, -50%);
  z-index: 1;

  /* regular button styling below */
  background-color: var(--lightgreen);
  border: none;
  border-radius:50%;
  width: 45px;
  height: 45px;
  position: absolute;
  right: 30px;
}

.carousel__overlay-delete-image-button__bin {
  color: var(--darkgray);
  position: absolute;
  top: 10px;
  left: 10px;
  font-size: 25px;
}

input[type="file"] {
  display: none;
}

.carousel__overlay-add-image-button {
  /* positioning */
  position: absolute;
  top: 26%;
  left: 90%;
  transform: translate(-75%, -50%);
  z-index: 1;

  /* regular button styling below */
  background-color: var(--lightgreen);
  border: none;
  border-radius:50%;
  width: 45px;
  height: 45px;
  position: absolute;
  right: 30px;
}

.carousel__overlay-add-image-button__plus {
  color: var(--darkgray);
  position: absolute;
  top: 10px;
  left: 10px;
  font-size: 25px;
}

@keyframes spinner {
  to { transform: rotate(360deg); }
}

.spinner {
  width: 2rem;
  height: 2rem;
  border: .25em solid white;
  border-right-color: transparent;
  border-radius: 50%;
  animation: spinner 1s linear infinite;
}

.spinner-sm {
  width: ;
  height: $spinner-height-sm;
  border-width: $spinner-border-width-sm;
}

.task-top-decoration {
  width: 100%;
  height: 140px;
}

.task-select-button-container {
  margin-top: 10px;
  display: flex;
  justify-content: center;
  width: 100%;
  gap: 80px;
}

.task-select-button {
  border: none;
  appearance: none;
  outline: none;
  padding: 8px;
  font-size: 18px;
  border-radius: 18px;
  width: 100px;
}

.task-select-button--selected {
  background-color: var(--lightgreen);
  color: var(--darkgray);
}

.task-select-button--unselected {
  background-color: var(--darkgray);
  color: var(--lightgreen);
}

.tasks-list__display-box {
  /* on the tasks screen, this is just a box that the tasks show in */
  background-color: var(--darkgray);
  border-radius: 10px;
  padding: 10px;
  margin: 25px;
}

.tasks-list__task-button {
  border-radius: 50%;
  width: 45px;
  height: 45px;
  border: none;
  right: 30px;
  margin-right: 30px;
  margin-left: auto;
}

.tasks-list__task-button--complete {
  background-color: var(--gray);
}

.tasks-list__task-button--uncomplete {
  background-color: var(--lightgreen);
}

.tasks-list__task-button__check {
  position: relative;
  top: 2px;
  font-size: 30px;
}

.tasks-list__task-button__check--complete {
  color: var(--lightgreen);
}

.tasks-list__task-button__check--uncomplete {
  color: var(--darkgray);
}

.tasks-list__row {
  margin-left: 20px;
  margin-top: 20px;
  display: flex;
  align-items: center;
}

.tasks-list__description {
  padding-left: 15px;
  margin-right: 65px;
}

.tasks-list__notes {
  padding-left: 15px;
  font-size: 16px;
  margin-right: 65px;
}

.userplant__delete-button {
  position: absolute;
  left: 5%;
  bottom: 30px;
}

.userplant__back-button {
  border-radius:50%;
  width: 70px;
  height: 70px;
  border: none;
  background-color: var(--lightgreen);
  position: absolute;
  right: 5%;
  bottom: 120px;
}

.userplant__back-button__arrow {
  font-size: 35px;
  color: var(--darkgray);
  position: absolute;
  top: 18px;
  left: 18px;
}

.userplant__edit-button {
  border-radius:50%;
  width: 45px;
  height: 45px;
  position: absolute;
  border: none;
  right: 30px;
  background-color: var(--lightgreen);
}

.userplant__edit-button__icon {
  color: var(--darkgray);
  font-size: 25px;
}

.userplant__name-edit-input {
  margin-bottom: 40px;
  padding: 8px;
  font-size: 18px;
  background-color: var(--lightgray);
  border: none;
  appearance: none;
  outline: none;
  border-radius:5px;
  resize: none;
}

.userplant__notes-edit-input {
  padding: 8px;
  font-size: 18px;
  background-color: var(--lightgray);
  border: none;
  appearance: none;
  outline: none;
  border-radius:5px;
  resize: none;
}

.userplant__save-edits-button {
  border-radius:50%;
  width: 70px;
  height: 70px;
  border: none;
  background-color: var(--lightgreen);
  position: absolute;
  right: 5%;
  bottom: 30px;
}

.userplant__save-edits-button__floppy {
  font-size: 35px;
  color: var(--darkgray);
  position: absolute;
  top: 18px;
  left: 18px;
}

.userplant__row-container {
  min-height: 460px;
}

.userplant__add-button {
  border-radius:50%;
  width: 70px;
  height: 70px;
  border: none;
  background-color: var(--lightgreen);
  position: sticky;
  /* this is a hack to stick it in the bottom right. it moves as screen size changes though*/
  left: 80%;
  bottom: 30px;
}

.userplant__add-button__plus {
  font-size: 30px;
  color: var(--darkgray);
  position: absolute;
  top: 20px;
  left: 20px;
}

.home-navigation__content-container {
  height: 93%;
  overflow-y: scroll;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.home-navigation__content-container::-webkit-scrollbar {
    display: none; /* Hide the scrollbar for webkit-based browsers */
}

.home-navigation__bottom-bar-container {
  width: 100%;
  position: absolute;
  bottom: 0;
  z-index: 1;
}

.bottom-navigation {
  background-color: var(--darkgray);
  display: flex;
  justify-content: space-evenly;
}

.bottom-navigation__button {
  padding: 10px;
  color: var(--lightgreen)
}

.plant-type__add-button {
  background-color: var(--lightgreen);
  border-radius: 50%;
  width: 45px;
  height: 45px;
  position: absolute;
  border: none;
  right: 30px;
}

.plant-type__add-button__plus {
  font-size: 30px;
  color: var(--darkgray);
  position: absolute;
  top: 8px;
  left: 8px;
}

.relative-parent {
  position: relative;
}

.login-wrapper {
  margin-top:160px;
  width: 75%;
  text-align: center;
  margin: 0 auto;
}

.login-input {
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 20px;
}

.login-button {
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
  margin-bottom: 20px;
}

